fix grid row overlaping

--- a/src/components/video-feature/VideoFeature.styles.scss
+++ b/src/components/video-feature/VideoFeature.styles.scss
@@ -1,8 +1,7 @@
 .feature-video {
   width:  20em;
-  // margin-left: 2em;
-  // margin-right: 2em;
- 
+  max-width: 90vw;
+
   video {
     cursor: pointer;
     width: 100%;
