--- a/src/components/video-gallery/VideoGallery.styles.scss
+++ b/src/components/video-gallery/VideoGallery.styles.scss
@@ -1,7 +1,19 @@
 .video-gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 10vw);
-  grid-row-gap: 65px;
-  grid-column-gap: 5px
+  grid-template-rows: 6.25em auto auto;
+  grid-row-gap: 0.3em;
+  grid-column-gap: 0.3em;
+  margin-bottom: 5em;
+}
+
+@media (orientation: landscape) {
+  .video-gallery {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 6.25em auto auto;
+    grid-row-gap: 0.3em;
+    grid-column-gap: 0.3em;
+    margin-bottom: 5em;
+  }
 }
