--- a/src/components/video-thumbnail/VideoThumbnail.styles.scss
+++ b/src/components/video-thumbnail/VideoThumbnail.styles.scss
@@ -1,6 +1,6 @@
 .thumbnail {
-  height: 100px; 
-  width: 100px;
+  height: 6.25em !important; 
+  width: 6.25em !important;
   overflow: hidden;
 
   video {
